--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -23,7 +23,15 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url = 'https://maven.brott.dev/'
+    }
+}
+
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+
+    implementation project(':RoadRunner')
 }
