--- a/RoadRunner/build.gradle
+++ b/RoadRunner/build.gradle
@@ -107,7 +107,7 @@ def addPomDependencies(root) {
 }
 
 task androidSourcesJar(type: Jar) {
-    classifier = "sources"
+    archiveClassifier = "sources"
     from android.sourceSets.main.java.srcDirs
 }
 
@@ -119,7 +119,7 @@ task androidJavadocs(type: Javadoc) {
 }
 
 task androidJavadocsJar(type: Jar, dependsOn: androidJavadocs) {
-    classifier = "javadoc"
+    archiveClassifier = "javadoc"
     from androidJavadocs.destinationDir
 }
 
@@ -129,7 +129,7 @@ project.afterEvaluate {
             maven(MavenPublication) {
                 artifact bundleReleaseAar
                 artifact androidSourcesJar
-//                artifact androidJavadocsJar
+                artifact androidJavadocsJar
 
                 groupId = "com.acmerobotics.roadrunner"
                 artifactId = "ftc"
