--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,7 @@
     "build": "vite build"
   },
   "devDependencies": {
+    "@types/node": "^22.13.10",
     "@types/plotly.js-dist-min": "2.3.1",
     "@types/regression": "^2.0.2",
     "typescript": "^5.1.6",
